# nostalgia

./: Cargo.toml  LICENSE.txt  README.md
examples/: crud.rs
nostalgia-derive/: Cargo.toml
nostalgia-derive/src/: lib.rs
nostalgia-derive/tests/: tests.rs
nostalgia-derive/tests/ui/: key-tests-argument-id-pass.rs  key-tests-assign-id-nonexist-fail.rs  key-tests-assign-id-nonexist-fail.stderr  key-tests-assign-id-pass.rs
src/: key.rs  lib.rs  query.rs  record.rs  storage.rs
