[package]
name = "nostalgia"
version = "0.0.1"
authors = ["melgray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb = "0.8.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] } 
thiserror = "1.0.20"

[dev-dependencies]
fake = { version = "2.2", features=['derive']}
rand = "0.7.3"
criterion = "0.3.3"
