[package]
name = "nostalgia-derive"
version = "0.0.1"
authors = ["Mel Gray <melgray@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.39", features = ["extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dev-dependencies]
trybuild = "1.0.32"
nostalgia = { path = "../" }
serde = { version = "1.0", features = ["derive"] } 
